# SEGYrecover

./: .bumpversion.cfg  .gitignore  README  README.md  README_adv.md  TUTORIAL.md  pyproject.toml
.tmp.driveupload/: 130331  130333  130335  130337  130339  130341  130343  130345  130347  130349  130353  130355  130363  130365  130367  130371  130373  130375  130377  130379  130381  130383  130385  130391  130395  130399  130403  130405  130407  130415  130419  130421  130423  130427  130429  130431  130433  130435  130437  130439  (+3400 more)
src/segyrecover/: __init__.py  __main__.py
src/segyrecover/core/: 0_README_core.md  _1_image_processor.py  _2_amplitude_extractor.py  _3_data_processor.py  _4_segy_writer.py  __init__.py  amplitude_extractor.py  data_processor.py  image_processor.py  segy_writer.py
src/segyrecover/examples/GEOMETRY/: RIV6.geometry
src/segyrecover/ui/: _0_welcome_tab.py  _1_load_image_tab.py  _2_parameters_tab.py  _3_1_roi_selection_logic.py  _3_roi_selection_tab.py  _4_1_digitization_logic.py  _4_2_coords_dialogs.py  _4_digitization_tab.py  _5_1_edit_header.py  _5_2_mute_topography.py  _5_3_agc_rms_dialog.py  _5_4_trace_mixing_dialog.py  _5_results_tab.py  __init__.py  app_dialogs.py  dialogs.py  help_dialogs.py  image_viewer.py  main_window.py  navigation_panel.py  status_bar.py  tab_container.py  theme.qss  workflow.py
src/segyrecover/utils/: __init__.py  console_utils.py  resource_utils.py
tests/: cleanup.py  debug_segyrecover.py  display_npy.py  test_coordinate_dialog.py  test_roi_dialog.py  test_windows_sizes.py
(+4 files in other folders)
