[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "segyrecover"
version = "1.1.2"  
description = "A Python tool for digitizing scanned seismic sections and converting them to standard SEGY format."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "GNU GPL-3.0"}
authors = [
    {name = "Alejandro Pertuz", email = "apertuz@ucm.es"}
]
dependencies = [
    "PySide6>=6.8.0",
    "matplotlib>=3.10.0",
    "numpy>=1.24.0",
    "opencv-python>=4.7.0",
    "scipy>=1.10.0",
    "seisio>=1.2.0",
    "seisplot>=1.2.0",
    "appdirs>=1.4.4",
    "tabulate>=0.9.0",
    "setuptools>=65.0.0",
    "psutil>=6.0.0"
]

[project.scripts]
segyrecover = "segyrecover.__main__:main"
segyrecover-cleanup = "segyrecover.cleanup:cleanup_config"

[tool.setuptools]
packages = ["segyrecover", "segyrecover.ui", "segyrecover.core", "segyrecover.utils"]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"segyrecover" = ["examples/**/*"]

